--- a/cube.vcxproj.filters
+++ b/cube.vcxproj.filters
@@ -7,6 +7,9 @@
     <ClCompile Include="src\InitShader.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="src\main.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\fshader.glsl">
@@ -29,6 +32,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\cube.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="src\initShader.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
