--- a/cube.vcxproj
+++ b/cube.vcxproj
@@ -14,6 +14,7 @@
     <ClCompile Include="src\cube.cpp" />
     <ClCompile Include="src\InitShader.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\texture.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="src\fshader.glsl" />
@@ -22,6 +23,7 @@
   <ItemGroup>
     <ClInclude Include="src\cube.h" />
     <ClInclude Include="src\initShader.h" />
+    <ClInclude Include="src\texture.hpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{D8FA1F1A-8261-4049-80EC-DC9678F99471}</ProjectGuid>
