--- a/cube.vcxproj.filters
+++ b/cube.vcxproj.filters
@@ -10,6 +10,9 @@
     <ClCompile Include="src\main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="src\texture.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\fshader.glsl">
@@ -37,5 +40,6 @@
     <ClInclude Include="src\initShader.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="src\texture.hpp" />
   </ItemGroup>
 </Project>
